# cloudGame-yinli_plan_IEG

./: CMakeLists.txt  README.md  test_sprintf.cpp
client with QT/build-clientPart-Desktop-Release/: Makefile  pull_stream_with_rtsp
client with QT/pull_stream_with_rtsp/: clientStuff.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  videoplayer.cpp  videoplayer.h
client/pull_stream_with_rtsp/: clientStuff.h  mainwindow.cpp  pull_stream_with_rtsp.pro  videoplayer.cpp  videoplayer.h
client/qt-client-server-master/client-server-widgets/build-clientPart-Desktop-Debug/: Makefile  pull_stream_with_rtsp
src/: CMakeLists.txt
src/build-clientPart-Desktop-Release/: pull_stream_with_rtsp
src/capture_codec/: CMakeLists.txt  stream with ffmpeg tools.txt
src/capture_codec/include/: processpool.h
src/capture_codec/src/: cgi_server.cpp  get_time.cpp  stream_pusher_with_rtsp.cpp
src/rtsp-simple-server_v0.21.6_linux_amd64/: rtsp-simple-server.yml
stream_pusher and cgi_server/: CMakeLists.txt  package.xml
stream_pusher and cgi_server/include/: ScreenRecorder.h  processpool.h
stream_pusher and cgi_server/src/: cgi_server.cpp  stream_pusher_with_rtmp.cpp  stream_pusher_with_rtsp.cpp
